# cxx23-modules-template

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
src/: main.cpp  module.cppm
